package com.university.project.legendsofswordandwand.battle.ability;

import com.university.project.legendsofswordandwand.battle.BattleState;
import com.university.project.legendsofswordandwand.battle.BattleUnit;

import java.util.List;

public interface Ability {

    int getManaCost();

    void execute(BattleUnit caster,
                 BattleUnit target,
                 List<BattleUnit> allies,
                 List<BattleUnit> enemies,
                 BattleState state);
}
