package com.university.project.legendsofswordandwand.model;

public class Item {}
