package com.university.project.legendsofswordandwand.repository;

import com.university.project.legendsofswordandwand.model.Campaign;
import com.university.project.legendsofswordandwand.model.Party;
import java.util.Optional;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.Query;
import org.springframework.data.repository.query.Param;

/**
 * Repository Interface for Campaign entities. Provides database access methods for Campaign
 * persistence and retrieval.
 */
public interface CampaignRepository extends JpaRepository<Campaign, Long> {

  @Query("SELECT c.party FROM Campaign c WHERE c.id = :campaignId AND c.active = true")
  Optional<Party> findActivePartyByCampaignId(@Param("campaignId") Long campaignId);
}
