package com.university.project.legendsofswordandwand.repository;

import com.university.project.legendsofswordandwand.model.Hero;
import org.springframework.data.jpa.repository.JpaRepository;

/**
 * Repository Interface for Hero entities. Provides database access methods for Hero persistence and
 * retrieval.
 */
public interface HeroRepository extends JpaRepository<Hero, Long> {}
